--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crypto-app-react",
-  "homepage": "https://enigmaticLee.github.io/crypto-app-react.git",
+  "homepage": "https://enigmaticlee.github.io/crypto-app-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
